--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>DocuWeb AI - Sign Up</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="icon" type="image/png" href="{{ url_for('static', filename='logo.png') }}">
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <style>
     body, html {
       height: 100%;
@@ -47,6 +46,9 @@
         </div>
         <button type="submit" class="btn btn-success w-100">Create Account</button>
       </form>
+      <a href="{{ url_for('auth0_login') }}" class="btn btn-outline-light w-100 mt-3">
+        <i class="fab fa-google"></i> Continue with Google
+      </a>
       <p class="mt-3 text-center">
         Already have an account? <a href="{{ url_for('login') }}">Login</a>
       </p>
